# codebaseqa

./: .coverage 2  .coverage 3  .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: Dockerfile  coverage.xml  diagnose_chunk_size.py  diagnose_content.py  diagnose_fix.py  diagnose_load.py  pyproject.toml  reproduce_ollama.py  requirements.txt  test_llm_factory.py  test_output.txt  verify_all.py  verify_ollama_retry.py
apps/api/src/: __init__.py  config.py  dependencies.py  main.py
apps/api/src/api/routes/: __init__.py  chat.py  learning.py  platform.py  repos.py  search.py
apps/api/src/core/: demo_mode.py  logging.py  rate_limit.py
apps/api/src/core/cache/: __init__.py  (+2 more)
apps/api/src/demo/: __init__.py  seed_demo.py
apps/api/src/models/: codetour_schemas.py  database.py  learning.py  migrations.py  schemas.py
apps/api/src/services/: challenges.py  gamification.py  indexing_service.py  learning_service.py
apps/api/tests/: conftest.py  test_parser.py
apps/api/tests/evals/: chat_quality_cases.json
apps/api/tests/integration/: test_api.py  test_chat_pipeline.py  test_demo_mode.py  test_learning_challenges.py  test_learning_v2_routes.py
apps/api/tests/unit/: test_indexing.py  test_learning_graph_v2.py  test_learning_v2_service.py  test_openai_embeddings.py  test_rag.py  test_rag_intents.py  test_rag_language_mapping.py  test_repo_manager.py  test_retrieval_scoring.py
cli/: README.md  pyproject.toml
cli/codebaseqa/: __init__.py  cli.py
(+84 files in other folders)
