[project]
name = "codebaseqa-cli"
version = "0.1.0"
description = "CodebaseQA CLI - AI-powered codebase Q&A from the command line"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
]

[project.scripts]
codebaseqa = "codebaseqa.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
